# feather

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
examples/: app.rs  feather_app.rs  middleware.rs  sync_app.rs
src/: lib.rs  middleware.rs  middlewares.rs  response.rs  sync.rs  types.rs
tests/: app_test.rs  test_app.rs
