[package]
name = "feather"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/BersisSe/feather"
description = "Feather: A minimal HTTP framework for Rust "
authors = ["Bersis Sevimli"]
license = "MIT"

[dependencies]
colored = "3.0.0"
ctrlc = "3.4.5"
hyper = { version = "1.5.2", features = ["http1","http2","server"], optional = true}
log = {version =  "0.4.22"} 
serde = { version = "1.0.217", features = ["derive"] , optional = true}
serde_json = {version = "1.0.135", optional = true}
thiserror = "2.0.11"
threadpool = "1.8.1"
tiny_http = "0.12.0"
tokio = { version = "1.43.0", features = ["full"], optional = true}


[lib]
name = "feather"
crate-type = ["lib"]    
path = "src/lib.rs"

[features]
default = ["json"]

tera = []
async = ["dep:tokio","dep:hyper"]
json = ["dep:serde","dep:serde_json"]

[[example]]
name = "sync_app"
path = "examples/sync_app.rs"
required-features = ["json"]


