[package]
name = "feather"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/BersisSe/feather"
description = "Feather: A minimal HTTP framework for Rust "
authors = ["Bersis Sevimli"]
license = "MIT"
readme = "README.md"
keywords = ["http","web","framework","minimal","rust"]
categories = ["web-programming","network-programming"]


[dependencies]
colored = "3.0.0"
ctrlc = "3.4.5"
dyn-clone = "1.0.19"
serde = { version = "1.0.217", features = ["derive"] , optional = true}
serde_json = {version = "1.0.135", optional = true}
thiserror = "2.0.12"
threadpool = "1.8.1"
tiny_http = "0.12.0"

[dev-dependencies]
reqwest = {version = "0.12.15", features = ["blocking"]}

[lib]
name = "feather"
crate-type = ["lib"]
path = "src/lib.rs"

[features]
default = ["json"]

tera = []
json = ["dep:serde","dep:serde_json"]

[[example]]
name = "app"
path = "examples/app.rs"

[[example]]
name = "middleware"
path = "examples/middleware.rs"
